# mcp-job-search

./: .gitignore
jobSearch/: jobSearch.py  pyproject.toml
mcp-client/: client.py  pyproject.toml
mcp-client/templates/: index.html
